...
            Container(
              height: 58,
              width: 246,
              child: FittedBox(
                fit: BoxFit.fitWidth,
                  child: Text("HOMEBREW",
                  key: Key('homebrew'),
                  style: TextStyle(
                    fontFamily: 'Norwester',
                    fontSize: 48,
                    fontWeight: FontWeight.w400,
                    color: Colors.white,
                    letterSpacing: 4.8,                
...
